# JARVIS-2024

./: .gitignore  JARVIS-2024.sln  README.md  client.html  package-lock.json  server.js
Assets/Figma/Fonts/: Jockey One_400_SDF.asset
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: O2_time.cs
JARV_Unity/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
TaskLists/: Assembly-CSharp.csproj  TaskLists.sln
TaskLists/Assets/: TaskLists.cs
TaskLists/ProjectSettings/: ProjectSettings.asset
TaskLists/UserSettings/: EditorUserSettings.asset  Search.settings
communication/Client/: Program.cs
communication/JSONClasses/: classes.cs
communication/Listener/: Listener.csproj  Program.cs
communication/js/: client.js  package-lock.json  package.json  server.js
docs/: README.md
lmcc/: server.py
lmcc/templates/: main.html
magellan/: README.md  main.py
src/: .config.json.swp  config.json  src.sln
src/gateway/: gateway.js  package-lock.json  package.json
src/lmcc/: lmcc.js  package-lock.json  package.json
src/uia/: CMakeLists.txt  README.md
src/uia/UIADetection/Assets/: BoundingBox 1.prefab  BoundingBox.prefab  CameraStream.cs  PanelMaterial.mat  WebcamStream.cs
src/uia/UIADetection/Assets/Scenes/: SampleScene.unity
src/uia/UIADetection/ProjectSettings/: ProjectSettings.asset  TagManager.asset
src/uia/cpp/: CMakeLists.txt  README.md
src/uia/cpp/features/: descriptors.npy  keypoints.json  keypoints.npy
src/uia/cpp/src/: main.py  uia_detection.cpp  uia_detection.h
src/uia/src/: main.cpp  uia_detection.cpp  uia_detection.h
(+188 files in other folders)
